payment model changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Project_Gemini</string>
+    <string name="app_name">hushh for students</string>
     <string name="default_web_client_id">AIzaSyCk8QAdNXZRBy4W_2NM7ymNNbFSIaxMG-8</string>
     <string name="logo_text">ID Card</string>
     <!-- TODO: Remove or change this placeholder text -->
